style.css
html{
    overflow-x: hidden;
}
body{
    font-family:sans-serif ;
    margin: 0;
    overflow-x: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}
main{
    display: flex;
    flex-direction: column;
    width: 70vw;
}
.title_screen{
    height: 14vh;
    width: 100vw;
}

.nav_container{
    width: 100vw;
    display: flex;
    justify-content: center;
}

/* Setting slider background image */
.slider_image{
    height: 100vh;
    width: 100vw;
    object-fit: cover;
    position: absolute;
    z-index: -1;
    top:0;
    left: 0;
    filter: brightness(65%);
}
nav{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;
    width: 70vw;
}



/* Nav top and title colors and placement */
.nav_top{
    display: flex;
    align-items: center;
    height: 8vh;
    justify-content: space-between;
    width: 100%;
}
.nav_top > .nav_title{
    margin:0;
    color: white;
    font-size: 2rem;
}


/* Top nav bar icons. Colors and placement */
.icon_nav_bar{
    height: 3vh;
    width: auto;
    fill: white;
}
.checkbox{
    display: none;
    position: absolute;
    top: 0;
}
.icon_container{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    justify-content: space-around;
    width: fit-content;
    gap:10px;
    justify-items: center;
}
.icon_container > .search_menu, .shopping_cart{
    cursor: pointer;
}
.icon_container > .shopping_cart{
    cursor: pointer;
}
.icon_container .menu{
    display: none;
}


/* Search and cart pop-out menus */
/* SEARCH MENU */
.search_window, .shopping_cart_menu{
    /* display: hidden; */
    flex-direction: column;
    background-color: white;
    width: 25vw;
    height: 100vh;
    position: absolute;
    top: 0;
    right: 0;
    transform: translateX(30vw);
    transition: transform 0.3s ease-in-out;
}
.menu_window{
    display: hidden;
}
.search_win_top> h4{
    margin-top: 0;
    margin-bottom: 0;
}
.shopping_cart_bot > p{
    padding-left: 2vw;
    margin-top:3vh;
}
input:checked + .search_window{
    transform: translateX(0);
}
.search_win_top, .shopping_cart_top{
    display: flex;
    height: 9vh;
    align-items: center;
    justify-content: center;
    justify-content: space-between;
    width: 90%;
    padding-left: 2vw;
    padding-right: 2vw;
    border-bottom: 1px solid grey;
    border-bottom: 1px solid grey;
}
.search_input{
    display: flex;
    justify-content: center;
    position: relative;
    height: 4vh;
    width: 70%;
    margin-left:auto;
    margin-right: auto;
    margin-top: 3vh;
    border: 1px solid grey;
    border-radius: 5px;
    transition: 0.2s ease-in-out;
}
.search_input:focus{
    outline:none;
    box-shadow: 0 0 10px grey;
    transition: 0.2s ease-in-out;
}
/* SHOPPING CART MENU */
input:checked + .shopping_cart_menu{
    transform: translateX(0);
}
.shopping_cart_top > h4{
    margin-top: 0;
    margin-bottom: 0;
}
.shopping_cart_bot{
    display: flex;
    flex-direction: column;
}
.browsing_button{
    margin-top: 2vh;
    display: flex;
    width: fit-content;
    height: 5vh;
    margin-left: auto;
    margin-right: auto;
    width: 21vw;
    border-radius:6vh;
    background-color: black;
    cursor: pointer;
}
.browsing_button > p{
    margin-left: auto;
    margin-right: auto;
    color: white;
}
.close{
    height: 3vh;
    width: auto;
    fill: black;
    cursor: pointer;
}
input{
    position: absolute;
    display: none;
    top: 0;
}





/* Nav bottom part placement */
.nav_bottom{
    display: flex;
    width: 38vw;
    align-items: center;
    justify-content: space-between;
    color: white;
}


/* Nav bar fade transition form background to white */
@media only screen and (min-width:960px){
.nav_container{
    transition: 0.3s;
}
.nav_container:hover{
    background-color: white;
    transition: 0.3s;
    color: black;
}
.nav_container:hover .to_black{
    color: black;
}
.nav_container:hover .icon_nav_bar{
    fill: black;
}
nav{
    transition: 0.3s;
}

/* Formating bottom nav */
.shop, .bestseller, .build, .lookbook, .sale{
    display: flex;
    align-items: center;
    cursor: pointer;
}
.chevron_down{
    height:2.3vh;
}}
.menu_window{
    display: none;
}



/* Underline animation */
/* Animation with pseudo elements. Doesnt worki with relative positin */
/* .shop, .bestseller, .build, .lookbook, .sale{
    display: flex;
    align-items: center;
    cursor: pointer;
    position: relative;
}
 .shop::after, .bestseller::after, .build::after,
  .lookbook::after, .sale::after{
    content: '';
    position: absolute;
    bottom:16px;
    left: 0;
    width: 0%;
    height: 1px;
    background-color: white;
    transition: all 200ms ease-in-out;
}
.shop:hover::after{
    width: 65%;
}
.bestseller:hover::after{
    width: 75%
}
.build:hover::after, .lookbook:hover::after, .sale:hover::after{
    width: 100%;
} */

/* Underline animation with background image */
.underline_text{
    background-image: linear-gradient(0.25turn, black ,black);
    background-size: 0% 1px;
    background-repeat:no-repeat;
    background-position: left bottom;
    transition: background-size 300ms ease;
}
.underline_text:hover{
    background-size: 100% 1px;
    cursor: pointer;
}


/* Home image and chevron colors and placement*/
.nav_bottom > img{
    height:3vh;
    width: auto;
    filter: invert(1);

}

/* Dropdown menu animation with hower. SHOP */
@keyframes fadeOut{
    0% {opacity: 1;}
    100% {opacity: 0;}
}
@keyframes fadeIn{
    0% {opacity: 0;}
    100% {opacity: 1;}
}
.dropdown_menu_shop{
    display: none;
    opacity: 0;
    position: absolute;
    top: 120px;
    left: 0;
    width: 100vw;
    height: 86.5vh;
    transition: transform 2s ease-in-out;
    background-color: white;
    animation: fadeOut 0.3s;
    overflow: hidden;
}
.shop:hover .dropdown_menu_shop{
    display: block;
    opacity: 100%;
    animation: fadeIn 0.3s;
}
/* ... */

